# ImageInterpreter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/app/bmpWnd/: bmpWnd.cpp  bmpWnd.h
src/app/httpParser/: httpParser.cpp  httpParser.h
src/app/httpServer/: httpServer.cpp  httpServer.h
src/app/matrix/: matrix.cpp  matrix.h
src/assets/: error.html  index.html
